apps/management/homepage/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  hostnames: ["homepage.mcmahan.io"]
  parentRefs:
    - name: local
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: homepage
          port: 80
